--- a/style.css
+++ b/style.css
@@ -67,6 +67,9 @@ img {
 
 .gallery img{
   width: 100%;
-  height: 200px;
+  height: 150px;
   margin-bottom: 10px;
+}
+.slide-height{
+  height: initial;
 }
